--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@ EN PRODasdfafa<html>
 EN PRODasdfafa<html>
 EN PRODasdfafa<html>
 Inicion
-<div class='masbotino'>
-Super componente en Ajax
+<dioheadsv class='masbotino'>
+FUN 2
+Super coooomponente en Ajax
+oooo  oo
+
+iiiippp FUN 1
+iiiiooo FUN 1
+ooo
+oooo
 </div>
 <div class='masbnoto'>
+END FUN 2
 Super componente 2 en Ajax
 Super componente 2 en Ajax
 </div>
+FUNCIONALIDAD 1
+af
+
+sd
+fasd
+f
+END FUN 1
 </html>
